form fix, hide scrollbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,23 @@
 @import 'tasks';
 @import 'tags';
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+.page-header {
+  display: flex;
+  padding-bottom: 10px;
+  align-items: baseline;
+  h1 { width: 130px }
+  .modal {
+    border: solid 1px grey;
+    border-radius: 3px;
+    padding: 5px;
+    box-shadow: 1px 4px 10px -7px;
+  }
+}
+
 .index-gravatar {
   text-align:center;
 }
