--- a/app/assets/stylesheets/tasks.scss
+++ b/app/assets/stylesheets/tasks.scss
@@ -1,16 +1,3 @@
-#tasks-header {
-  display: flex;
-  padding-bottom: 10px;
-  align-items: baseline;
-  h1 { width: 130px }
-  .modal {
-    border: solid 1px grey;
-    border-radius: 3px;
-    padding: 5px;
-    box-shadow: 1px 4px 10px -7px;
-  }
-}
-
 #planning-board {
   display: flex;
   justify-content: space-between;
